<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/login_logo"
            android:src="@drawable/voicebank_white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/login_welcome"
            android:layout_below="@id/login_logo"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_text"
            android:text="@string/login_welcome"
            android:textSize="15dp"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_below="@id/login_welcome">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_text"
                android:textAlignment="center"
                android:textSize="15dp"
                android:hint="@string/login_email"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_below="@id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_text"
                android:textAlignment="center"
                android:textSize="15dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/login_btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btnLogin"
                android:textSize="15dp"
                android:background="@drawable/rounded_corners_button_blue"
                android:textColor="@color/white"
                android:layout_below="@id/login_password"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/login_btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btnRegister"
                android:textSize="15dp"
                android:background="@drawable/rounded_corners_button_white"
                android:textColor="@color/black_text"
                android:layout_below="@id/login_btnLogin"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>